--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@
 	loader_version=0.13.3
 
 # Mod Properties
-	mod_version = 1.0.0
+	mod_version = 1.0
 	maven_group = dev.sxmurxy
-	archives_base_name = ModName
+	archives_base_name = Template
 
 # Dependencies
 # currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api (or https://fabricmc.net/versions.html)
